# Tugas-Akhir-Python-lvl3

./: README.md  main.py
study-field-quiz/: README.md  pyproject.toml  requirements.txt
study-field-quiz/src/: main.py
study-field-quiz/src/data/: questions.json
study-field-quiz/src/models/: question.py
study-field-quiz/src/ui/: components.py  quiz_window.py
study-field-quiz/src/utils/: scorer.py
study-field-quiz/tests/: test_quiz.py
study_field_quiz/src/: db.py
