[tool.poetry]
name = "study-field-quiz"
version = "0.1.0"
description = "A quiz application to determine preferred fields of study."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tkinter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"